# evilssp

./: CMakeLists.txt  README.md  ssp.sln
include/: dns.h  https.h  ssp.h  utils.h
src/: dllmain.c  dns.c  https.c  utils.c
ssp/: dllmain.c  dns.c  dns.h  ssp.h  ssp.vcxproj  ssp.vcxproj.filters  utils.c  utils.h
